Exercises-part-2/exercise-2.01/manifests/log-output-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: writer
        image: sirpacoder/writer:v0.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      - name: reader
        image: sirpacoder/reader:v0.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
