Exercises-part-2/exercise-2.01/manifests/pingpong-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: files-claim
      containers:
      - name: pingpong
        image: sirpacoder/pingpong:v0.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
