Exercises-part-2/exercise-2.01/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
  - name: pingpong
    port: 30080
    protocol: TCP
    targetPort: 5000
